up to v0.0.2-beta.1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,4 @@
 
-[data]
-    groups = default
-    sources = main
-
-[datagroup "default"] 
-    enabled=1
-    uri=uri:datagroup:default
-    table-name-prefix=wat_
-    datasource=main
-    alias=default
-
-[datasource "main"]
-    prefix=wat_
-    uri=uri:datasource:main#wat
-    username=test
-    password=test
-    driver=sqlserver
-    database=wat
-
 [dns "tcp"]
     host = 0.0.0.0
     port = 53
@@ -26,5 +7,23 @@
     host = 0.0.0.0
     port = 53
 
-[dns "resolver.upstream"]
+
+[dnsss-resolver "upstream"]
+    enabled = 1
     servers = 192.168.0.1:
+
+[dnsss-resolver "monitor"]
+    enabled = 1
+    log-detail = 0
+
+[dnsss-resolver "error-filter"]
+    enabled = 1
+    quiet-mode = 1
+
+[dnsss-resolver "cache"]
+    enabled = 1
+    max-ttl = 3600
+    min-ttl = 10
+
+[dnsss-resolver "responder"]
+    enabled = 1
