修改了日志输出的方式, 使用回调函数输出

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@
     host = 0.0.0.0
     port = 53
 
+[dnsss "logger"]
+    log-details = 1
 
 [dnsss-resolver "upstream"]
     enabled = 1
@@ -14,8 +16,7 @@
 
 [dnsss-resolver "monitor"]
     enabled = 1
-    log-detail = 0
-
+    
 [dnsss-resolver "error-filter"]
     enabled = 1
     quiet-mode = 1
@@ -27,3 +28,7 @@
 
 [dnsss-resolver "responder"]
     enabled = 1
+
+[starter "stopper"]
+    enabled = 1
+    action = start
